Implemented File upload endpoint
